fix z-index

--- a/src/main/webapp/css/myStyle.css
+++ b/src/main/webapp/css/myStyle.css
@@ -5,7 +5,7 @@
     width: 100%;
     box-sizing: border-box;
     background-color: white;
-    z-index: 1010;
+    z-index: 1;
 }
 
 #result {
